--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewpoint" content="width-device-width, initial-scale-1.0">
+    <meta name="viewpoint" content="width-device-width, initial-scale=1.0">
     <title>Model Deployment</title>
 </head>
 <body>
@@ -16,7 +16,8 @@
         <input type="submit">
     </form>
     {% if my_marks %}
-        <p>Your predict marks are</p>{{my_marks}}
+        <p>Your predict marks are</p>
+        {{my_marks}}
     {% endif %}
 
 
